parser_test/b.output
Terminals which are not used

   FILLHISTOS


State 103 conflicts: 4 reduce/reduce
State 208 conflicts: 2 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: initializations definitions commands

    2 initializations: initializations initialization
    3                | /* empty */

    4 initialization: MINPTE '=' NB
    5               | MINPTM '=' NB
    6               | MINPTJ '=' NB
    7               | MINPTG '=' NB
    8               | MAXETAE '=' NB
    9               | MAXETAM '=' NB
   10               | MAXETAJ '=' NB
   11               | MAXETAG '=' NB
   12               | MAXMET '=' NB
   13               | TRGE '=' INT
   14               | TRGM '=' INT
   15               | LVLO '=' NB
   16               | ATLASOD '=' NB
   17               | CMSOD '=' NB
   18               | DELPHES '=' NB
   19               | FCC '=' NB
   20               | LHCO '=' NB

   21 definitions: definitions definition
   22            | /* empty */

   23 definition: DEF ID ':' particules
   24           | DEF ID ':' e

   25 function: '{' particules '}' 'm'
   26         | '{' particules '}' 'q'
   27         | '{' particules '}' 'P'
   28         | '{' particules '}' 'E'
   29         | '{' particules '}' PHI
   30         | '{' particules '}' ETA
   31         | '{' particules '}' ABSETA
   32         | '{' particules '}' PT
   33         | '{' particules '}' PZ
   34         | '{' particules '}' NBF
   35         | list DR
   36         | list DPHI
   37         | NELE
   38         | NMUO
   39         | NLEP
   40         | NPHO
   41         | NJET
   42         | NBJET
   43         | NQGJET
   44         | HT
   45         | METMWT
   46         | MWT
   47         | MET
   48         | ALL
   49         | LEPSF

   50 @1: /* empty */

   51 list: '{' particules @1 ',' particules '}'

   52 particules: particules particule
   53           | particule

   54 particule: ELE '_' index
   55          | MUO '_' index
   56          | LEP '_' index
   57          | PHO '_' index
   58          | JET '_' index
   59          | BJET '_' index
   60          | QGJET '_' index
   61          | NUMET '_' index
   62          | METLV '_' index
   63          | ID

   64 index: '-' INT
   65      | INT

   66 commands: commands command
   67         | /* empty */

   68 command: CMD condition
   69        | CMD ALL
   70        | CMD ifstatement
   71        | HISTO ID ',' description ',' INT ',' INT ',' INT ',' ID

   72 description: description ID
   73            | ID

   74 ifstatement: condition '?' action ':' action

   75 action: condition
   76       | ALL
   77       | ifstatement

   78 condition: e LT e
   79          | e GT e
   80          | e LE e
   81          | e GE e
   82          | e EQ e
   83          | e NE e
   84          | e IRG e e
   85          | e ERG e e
   86          | condition AND condition
   87          | condition OR condition
   88          | '(' condition ')'

   89 e: e '+' e
   90  | e '-' e
   91  | e '*' e
   92  | e '/' e
   93  | e '^' e
   94  | '-' e
   95  | COS '(' e ')'
   96  | SIN '(' e ')'
   97  | TAN '(' e ')'
   98  | '(' e ')'
   99  | NB
  100  | INT
  101  | function
  102  | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 88 95 96 97 98
')' (41) 88 95 96 97 98
'*' (42) 91
'+' (43) 89
',' (44) 51 71
'-' (45) 64 90 94
'/' (47) 92
':' (58) 23 24 74
'=' (61) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
'?' (63) 74
'E' (69) 28
'P' (80) 27
'^' (94) 93
'_' (95) 54 55 56 57 58 59 60 61 62
'm' (109) 25
'q' (113) 26
'{' (123) 25 26 27 28 29 30 31 32 33 34 51
'}' (125) 25 26 27 28 29 30 31 32 33 34 51
error (256)
DEF (258) 23 24
CMD (259) 68 69 70
HISTO (260) 71
ELE (261) 54
MUO (262) 55
LEP (263) 56
PHO (264) 57
JET (265) 58
BJET (266) 59
QGJET (267) 60
NUMET (268) 61
METLV (269) 62
MINPTM (270) 5
MINPTG (271) 7
MINPTJ (272) 6
MINPTE (273) 4
MAXETAM (274) 9
MAXETAE (275) 8
MAXETAG (276) 11
MAXETAJ (277) 10
MAXMET (278) 12
TRGE (279) 13
TRGM (280) 14
LVLO (281) 15
ATLASOD (282) 16
CMSOD (283) 17
DELPHES (284) 18
FCC (285) 19
LHCO (286) 20
PHI (287) 29
ETA (288) 30
ABSETA (289) 31
PT (290) 32
PZ (291) 33
NBF (292) 34
DR (293) 35
DPHI (294) 36
NELE (295) 37
NMUO (296) 38
NLEP (297) 39
NPHO (298) 40
NJET (299) 41
NBJET (300) 42
NQGJET (301) 43
HT (302) 44
METMWT (303) 45
MWT (304) 46
MET (305) 47
ALL (306) 48 69 76
LEPSF (307) 49
FILLHISTOS (308)
NB (309) 4 5 6 7 8 9 10 11 12 15 16 17 18 19 20 99
ID (310) 23 24 63 71 72 73 102
SIN (311) 96
COS (312) 95
TAN (313) 97
INT (314) 13 14 64 65 71 100
OR (315) 87
AND (316) 86
LT (317) 78
GT (318) 79
LE (319) 80
GE (320) 81
EQ (321) 82
NE (322) 83
IRG (323) 84
ERG (324) 85
Unary (325)


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
input (90)
    on left: 1, on right: 0
initializations (91)
    on left: 2 3, on right: 1 2
initialization (92)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20,
    on right: 2
definitions (93)
    on left: 21 22, on right: 1 21
definition (94)
    on left: 23 24, on right: 21
function (95)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49, on right: 101
list (96)
    on left: 51, on right: 35 36
@1 (97)
    on left: 50, on right: 51
particules (98)
    on left: 52 53, on right: 23 25 26 27 28 29 30 31 32 33 34 51 52
particule (99)
    on left: 54 55 56 57 58 59 60 61 62 63, on right: 52 53
index (100)
    on left: 64 65, on right: 54 55 56 57 58 59 60 61 62
commands (101)
    on left: 66 67, on right: 1 66
command (102)
    on left: 68 69 70 71, on right: 66
description (103)
    on left: 72 73, on right: 71 72
ifstatement (104)
    on left: 74, on right: 70 77
action (105)
    on left: 75 76 77, on right: 74
condition (106)
    on left: 78 79 80 81 82 83 84 85 86 87 88, on right: 68 74 75 86
    87 88
e (107)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102,
    on right: 24 78 79 80 81 82 83 84 85 89 90 91 92 93 94 95 96 97
    98


state 0

    0 $accept: . input $end

    $default  reduce using rule 3 (initializations)

    input            go to state 1
    initializations  go to state 2


state 1

    0 $accept: input . $end

    $end  shift, and go to state 3


state 2

    1 input: initializations . definitions commands
    2 initializations: initializations . initialization

    MINPTM   shift, and go to state 4
    MINPTG   shift, and go to state 5
    MINPTJ   shift, and go to state 6
    MINPTE   shift, and go to state 7
    MAXETAM  shift, and go to state 8
    MAXETAE  shift, and go to state 9
    MAXETAG  shift, and go to state 10
    MAXETAJ  shift, and go to state 11
    MAXMET   shift, and go to state 12
    TRGE     shift, and go to state 13
    TRGM     shift, and go to state 14
    LVLO     shift, and go to state 15
    ATLASOD  shift, and go to state 16
    CMSOD    shift, and go to state 17
    DELPHES  shift, and go to state 18
    FCC      shift, and go to state 19
    LHCO     shift, and go to state 20

    $default  reduce using rule 22 (definitions)

    initialization  go to state 21
    definitions     go to state 22


state 3

    0 $accept: input $end .

    $default  accept


state 4

    5 initialization: MINPTM . '=' NB

    '='  shift, and go to state 23


state 5

    7 initialization: MINPTG . '=' NB

    '='  shift, and go to state 24


state 6

    6 initialization: MINPTJ . '=' NB

    '='  shift, and go to state 25


state 7

    4 initialization: MINPTE . '=' NB

    '='  shift, and go to state 26


state 8

    9 initialization: MAXETAM . '=' NB

    '='  shift, and go to state 27


state 9

    8 initialization: MAXETAE . '=' NB

    '='  shift, and go to state 28


state 10

   11 initialization: MAXETAG . '=' NB

    '='  shift, and go to state 29


state 11

   10 initialization: MAXETAJ . '=' NB

    '='  shift, and go to state 30


state 12

   12 initialization: MAXMET . '=' NB

    '='  shift, and go to state 31


state 13

   13 initialization: TRGE . '=' INT

    '='  shift, and go to state 32


state 14

   14 initialization: TRGM . '=' INT

    '='  shift, and go to state 33


state 15

   15 initialization: LVLO . '=' NB

    '='  shift, and go to state 34


state 16

   16 initialization: ATLASOD . '=' NB

    '='  shift, and go to state 35


state 17

   17 initialization: CMSOD . '=' NB

    '='  shift, and go to state 36


state 18

   18 initialization: DELPHES . '=' NB

    '='  shift, and go to state 37


state 19

   19 initialization: FCC . '=' NB

    '='  shift, and go to state 38


state 20

   20 initialization: LHCO . '=' NB

    '='  shift, and go to state 39


state 21

    2 initializations: initializations initialization .

    $default  reduce using rule 2 (initializations)


state 22

    1 input: initializations definitions . commands
   21 definitions: definitions . definition

    DEF  shift, and go to state 40

    $default  reduce using rule 67 (commands)

    definition  go to state 41
    commands    go to state 42


state 23

    5 initialization: MINPTM '=' . NB

    NB  shift, and go to state 43


state 24

    7 initialization: MINPTG '=' . NB

    NB  shift, and go to state 44


state 25

    6 initialization: MINPTJ '=' . NB

    NB  shift, and go to state 45


state 26

    4 initialization: MINPTE '=' . NB

    NB  shift, and go to state 46


state 27

    9 initialization: MAXETAM '=' . NB

    NB  shift, and go to state 47


state 28

    8 initialization: MAXETAE '=' . NB

    NB  shift, and go to state 48


state 29

   11 initialization: MAXETAG '=' . NB

    NB  shift, and go to state 49


state 30

   10 initialization: MAXETAJ '=' . NB

    NB  shift, and go to state 50


state 31

   12 initialization: MAXMET '=' . NB

    NB  shift, and go to state 51


state 32

   13 initialization: TRGE '=' . INT

    INT  shift, and go to state 52


state 33

   14 initialization: TRGM '=' . INT

    INT  shift, and go to state 53


state 34

   15 initialization: LVLO '=' . NB

    NB  shift, and go to state 54


state 35

   16 initialization: ATLASOD '=' . NB

    NB  shift, and go to state 55


state 36

   17 initialization: CMSOD '=' . NB

    NB  shift, and go to state 56


state 37

   18 initialization: DELPHES '=' . NB

    NB  shift, and go to state 57


state 38

   19 initialization: FCC '=' . NB

    NB  shift, and go to state 58


state 39

   20 initialization: LHCO '=' . NB

    NB  shift, and go to state 59


state 40

   23 definition: DEF . ID ':' particules
   24           | DEF . ID ':' e

    ID  shift, and go to state 60


state 41

   21 definitions: definitions definition .

    $default  reduce using rule 21 (definitions)


state 42

    1 input: initializations definitions commands .
   66 commands: commands . command

    CMD    shift, and go to state 61
    HISTO  shift, and go to state 62

    $default  reduce using rule 1 (input)

    command  go to state 63


state 43

    5 initialization: MINPTM '=' NB .

    $default  reduce using rule 5 (initialization)


state 44

    7 initialization: MINPTG '=' NB .

    $default  reduce using rule 7 (initialization)


state 45

    6 initialization: MINPTJ '=' NB .

    $default  reduce using rule 6 (initialization)


state 46

    4 initialization: MINPTE '=' NB .

    $default  reduce using rule 4 (initialization)


state 47

    9 initialization: MAXETAM '=' NB .

    $default  reduce using rule 9 (initialization)


state 48

    8 initialization: MAXETAE '=' NB .

    $default  reduce using rule 8 (initialization)


state 49

   11 initialization: MAXETAG '=' NB .

    $default  reduce using rule 11 (initialization)


state 50

   10 initialization: MAXETAJ '=' NB .

    $default  reduce using rule 10 (initialization)


state 51

   12 initialization: MAXMET '=' NB .

    $default  reduce using rule 12 (initialization)


state 52

   13 initialization: TRGE '=' INT .

    $default  reduce using rule 13 (initialization)


state 53

   14 initialization: TRGM '=' INT .

    $default  reduce using rule 14 (initialization)


state 54

   15 initialization: LVLO '=' NB .

    $default  reduce using rule 15 (initialization)


state 55

   16 initialization: ATLASOD '=' NB .

    $default  reduce using rule 16 (initialization)


state 56

   17 initialization: CMSOD '=' NB .

    $default  reduce using rule 17 (initialization)


state 57

   18 initialization: DELPHES '=' NB .

    $default  reduce using rule 18 (initialization)


state 58

   19 initialization: FCC '=' NB .

    $default  reduce using rule 19 (initialization)


state 59

   20 initialization: LHCO '=' NB .

    $default  reduce using rule 20 (initialization)


state 60

   23 definition: DEF ID . ':' particules
   24           | DEF ID . ':' e

    ':'  shift, and go to state 64


state 61

   68 command: CMD . condition
   69        | CMD . ALL
   70        | CMD . ifstatement

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 76
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 86

    function     go to state 87
    list         go to state 88
    ifstatement  go to state 89
    condition    go to state 90
    e            go to state 91


state 62

   71 command: HISTO . ID ',' description ',' INT ',' INT ',' INT ',' ID

    ID  shift, and go to state 92


state 63

   66 commands: commands command .

    $default  reduce using rule 66 (commands)


state 64

   23 definition: DEF ID ':' . particules
   24           | DEF ID ':' . e

    ELE     shift, and go to state 93
    MUO     shift, and go to state 94
    LEP     shift, and go to state 95
    PHO     shift, and go to state 96
    JET     shift, and go to state 97
    BJET    shift, and go to state 98
    QGJET   shift, and go to state 99
    NUMET   shift, and go to state 100
    METLV   shift, and go to state 101
    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 103
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function    go to state 87
    list        go to state 88
    particules  go to state 105
    particule   go to state 106
    e           go to state 107


state 65

   37 function: NELE .

    $default  reduce using rule 37 (function)


state 66

   38 function: NMUO .

    $default  reduce using rule 38 (function)


state 67

   39 function: NLEP .

    $default  reduce using rule 39 (function)


state 68

   40 function: NPHO .

    $default  reduce using rule 40 (function)


state 69

   41 function: NJET .

    $default  reduce using rule 41 (function)


state 70

   42 function: NBJET .

    $default  reduce using rule 42 (function)


state 71

   43 function: NQGJET .

    $default  reduce using rule 43 (function)


state 72

   44 function: HT .

    $default  reduce using rule 44 (function)


state 73

   45 function: METMWT .

    $default  reduce using rule 45 (function)


state 74

   46 function: MWT .

    $default  reduce using rule 46 (function)


state 75

   47 function: MET .

    $default  reduce using rule 47 (function)


state 76

   48 function: ALL .
   69 command: CMD ALL .

    $end      reduce using rule 69 (command)
    CMD       reduce using rule 69 (command)
    HISTO     reduce using rule 69 (command)
    $default  reduce using rule 48 (function)


state 77

   49 function: LEPSF .

    $default  reduce using rule 49 (function)


state 78

   99 e: NB .

    $default  reduce using rule 99 (e)


state 79

  102 e: ID .

    $default  reduce using rule 102 (e)


state 80

   96 e: SIN . '(' e ')'

    '('  shift, and go to state 108


state 81

   95 e: COS . '(' e ')'

    '('  shift, and go to state 109


state 82

   97 e: TAN . '(' e ')'

    '('  shift, and go to state 110


state 83

  100 e: INT .

    $default  reduce using rule 100 (e)


state 84

   94 e: '-' . e

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 111


state 85

   25 function: '{' . particules '}' 'm'
   26         | '{' . particules '}' 'q'
   27         | '{' . particules '}' 'P'
   28         | '{' . particules '}' 'E'
   29         | '{' . particules '}' PHI
   30         | '{' . particules '}' ETA
   31         | '{' . particules '}' ABSETA
   32         | '{' . particules '}' PT
   33         | '{' . particules '}' PZ
   34         | '{' . particules '}' NBF
   51 list: '{' . particules @1 ',' particules '}'

    ELE    shift, and go to state 93
    MUO    shift, and go to state 94
    LEP    shift, and go to state 95
    PHO    shift, and go to state 96
    JET    shift, and go to state 97
    BJET   shift, and go to state 98
    QGJET  shift, and go to state 99
    NUMET  shift, and go to state 100
    METLV  shift, and go to state 101
    ID     shift, and go to state 112

    particules  go to state 113
    particule   go to state 106


state 86

   88 condition: '(' . condition ')'
   98 e: '(' . e ')'

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 86

    function   go to state 87
    list       go to state 88
    condition  go to state 114
    e          go to state 115


state 87

  101 e: function .

    $default  reduce using rule 101 (e)


state 88

   35 function: list . DR
   36         | list . DPHI

    DR    shift, and go to state 116
    DPHI  shift, and go to state 117


state 89

   70 command: CMD ifstatement .

    $default  reduce using rule 70 (command)


state 90

   68 command: CMD condition .
   74 ifstatement: condition . '?' action ':' action
   86 condition: condition . AND condition
   87          | condition . OR condition

    OR   shift, and go to state 118
    AND  shift, and go to state 119
    '?'  shift, and go to state 120

    $default  reduce using rule 68 (command)


state 91

   78 condition: e . LT e
   79          | e . GT e
   80          | e . LE e
   81          | e . GE e
   82          | e . EQ e
   83          | e . NE e
   84          | e . IRG e e
   85          | e . ERG e e
   89 e: e . '+' e
   90  | e . '-' e
   91  | e . '*' e
   92  | e . '/' e
   93  | e . '^' e

    LT   shift, and go to state 121
    GT   shift, and go to state 122
    LE   shift, and go to state 123
    GE   shift, and go to state 124
    EQ   shift, and go to state 125
    NE   shift, and go to state 126
    IRG  shift, and go to state 127
    ERG  shift, and go to state 128
    '+'  shift, and go to state 129
    '-'  shift, and go to state 130
    '*'  shift, and go to state 131
    '/'  shift, and go to state 132
    '^'  shift, and go to state 133


state 92

   71 command: HISTO ID . ',' description ',' INT ',' INT ',' INT ',' ID

    ','  shift, and go to state 134


state 93

   54 particule: ELE . '_' index

    '_'  shift, and go to state 135


state 94

   55 particule: MUO . '_' index

    '_'  shift, and go to state 136


state 95

   56 particule: LEP . '_' index

    '_'  shift, and go to state 137


state 96

   57 particule: PHO . '_' index

    '_'  shift, and go to state 138


state 97

   58 particule: JET . '_' index

    '_'  shift, and go to state 139


state 98

   59 particule: BJET . '_' index

    '_'  shift, and go to state 140


state 99

   60 particule: QGJET . '_' index

    '_'  shift, and go to state 141


state 100

   61 particule: NUMET . '_' index

    '_'  shift, and go to state 142


state 101

   62 particule: METLV . '_' index

    '_'  shift, and go to state 143


state 102

   48 function: ALL .

    $default  reduce using rule 48 (function)


state 103

   63 particule: ID .
  102 e: ID .

    $end      reduce using rule 63 (particule)
    $end      [reduce using rule 102 (e)]
    DEF       reduce using rule 63 (particule)
    DEF       [reduce using rule 102 (e)]
    CMD       reduce using rule 63 (particule)
    CMD       [reduce using rule 102 (e)]
    HISTO     reduce using rule 63 (particule)
    HISTO     [reduce using rule 102 (e)]
    '+'       reduce using rule 102 (e)
    '-'       reduce using rule 102 (e)
    '*'       reduce using rule 102 (e)
    '/'       reduce using rule 102 (e)
    '^'       reduce using rule 102 (e)
    $default  reduce using rule 63 (particule)


state 104

   98 e: '(' . e ')'

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 144


state 105

   23 definition: DEF ID ':' particules .
   52 particules: particules . particule

    ELE    shift, and go to state 93
    MUO    shift, and go to state 94
    LEP    shift, and go to state 95
    PHO    shift, and go to state 96
    JET    shift, and go to state 97
    BJET   shift, and go to state 98
    QGJET  shift, and go to state 99
    NUMET  shift, and go to state 100
    METLV  shift, and go to state 101
    ID     shift, and go to state 112

    $default  reduce using rule 23 (definition)

    particule  go to state 145


state 106

   53 particules: particule .

    $default  reduce using rule 53 (particules)


state 107

   24 definition: DEF ID ':' e .
   89 e: e . '+' e
   90  | e . '-' e
   91  | e . '*' e
   92  | e . '/' e
   93  | e . '^' e

    '+'  shift, and go to state 129
    '-'  shift, and go to state 130
    '*'  shift, and go to state 131
    '/'  shift, and go to state 132
    '^'  shift, and go to state 133

    $default  reduce using rule 24 (definition)


state 108

   96 e: SIN '(' . e ')'

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 146


state 109

   95 e: COS '(' . e ')'

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 147


state 110

   97 e: TAN '(' . e ')'

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 148


state 111

   89 e: e . '+' e
   90  | e . '-' e
   91  | e . '*' e
   92  | e . '/' e
   93  | e . '^' e
   94  | '-' e .

    '^'  shift, and go to state 133

    $default  reduce using rule 94 (e)


state 112

   63 particule: ID .

    $default  reduce using rule 63 (particule)


state 113

   25 function: '{' particules . '}' 'm'
   26         | '{' particules . '}' 'q'
   27         | '{' particules . '}' 'P'
   28         | '{' particules . '}' 'E'
   29         | '{' particules . '}' PHI
   30         | '{' particules . '}' ETA
   31         | '{' particules . '}' ABSETA
   32         | '{' particules . '}' PT
   33         | '{' particules . '}' PZ
   34         | '{' particules . '}' NBF
   51 list: '{' particules . @1 ',' particules '}'
   52 particules: particules . particule

    ELE    shift, and go to state 93
    MUO    shift, and go to state 94
    LEP    shift, and go to state 95
    PHO    shift, and go to state 96
    JET    shift, and go to state 97
    BJET   shift, and go to state 98
    QGJET  shift, and go to state 99
    NUMET  shift, and go to state 100
    METLV  shift, and go to state 101
    ID     shift, and go to state 112
    '}'    shift, and go to state 149

    $default  reduce using rule 50 (@1)

    @1         go to state 150
    particule  go to state 145


state 114

   86 condition: condition . AND condition
   87          | condition . OR condition
   88          | '(' condition . ')'

    OR   shift, and go to state 118
    AND  shift, and go to state 119
    ')'  shift, and go to state 151


state 115

   78 condition: e . LT e
   79          | e . GT e
   80          | e . LE e
   81          | e . GE e
   82          | e . EQ e
   83          | e . NE e
   84          | e . IRG e e
   85          | e . ERG e e
   89 e: e . '+' e
   90  | e . '-' e
   91  | e . '*' e
   92  | e . '/' e
   93  | e . '^' e
   98  | '(' e . ')'

    LT   shift, and go to state 121
    GT   shift, and go to state 122
    LE   shift, and go to state 123
    GE   shift, and go to state 124
    EQ   shift, and go to state 125
    NE   shift, and go to state 126
    IRG  shift, and go to state 127
    ERG  shift, and go to state 128
    '+'  shift, and go to state 129
    '-'  shift, and go to state 130
    '*'  shift, and go to state 131
    '/'  shift, and go to state 132
    '^'  shift, and go to state 133
    ')'  shift, and go to state 152


state 116

   35 function: list DR .

    $default  reduce using rule 35 (function)


state 117

   36 function: list DPHI .

    $default  reduce using rule 36 (function)


state 118

   87 condition: condition OR . condition

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 86

    function   go to state 87
    list       go to state 88
    condition  go to state 153
    e          go to state 91


state 119

   86 condition: condition AND . condition

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 86

    function   go to state 87
    list       go to state 88
    condition  go to state 154
    e          go to state 91


state 120

   74 ifstatement: condition '?' . action ':' action

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 155
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 86

    function     go to state 87
    list         go to state 88
    ifstatement  go to state 156
    action       go to state 157
    condition    go to state 158
    e            go to state 91


state 121

   78 condition: e LT . e

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 159


state 122

   79 condition: e GT . e

    NELE    shift, and go to state 65
    NMUO    shift, and go to state 66
    NLEP    shift, and go to state 67
    NPHO    shift, and go to state 68
    NJET    shift, and go to state 69
    NBJET   shift, and go to state 70
    NQGJET  shift, and go to state 71
    HT      shift, and go to state 72
    METMWT  shift, and go to state 73
    MWT     shift, and go to state 74
    MET     shift, and go to state 75
    ALL     shift, and go to state 102
    LEPSF   shift, and go to state 77
    NB      shift, and go to state 78
    ID      shift, and go to state 79
    SIN     shift, and go to state 80
    COS     shift, and go to state 81
    TAN     shift, and go to state 82
    INT     shift, and go to state 83
    '-'     shift, and go to state 84
    '{'     shift, and go to state 85
    '('     shift, and go to state 104

    function  go to state 87
    list      go to state 88
    e         go to state 160


state 123

   80 condition: e LE . e
